[tool.poetry]
name = "rtfm"
version = "0.1.0"
description = "notes to self, might help someone else."
authors = ["jr-dexter"]
license = "CC0 1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
yamllint = "*"
Markdown = "*"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
